// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Report Filters Reducer add a filter 1`] = `
Object {
  "activeList": Array [
    Object {
      "type": "Example Domain",
      "value": "sparkpost.com",
    },
  ],
  "from": 1970-01-01T00:00:00.000Z,
  "relativeRange": "day",
  "to": 1970-01-02T00:00:00.000Z,
}
`;

exports[`Report Filters Reducer add multiple filters 1`] = `
Object {
  "activeList": Array [
    Object {
      "type": "Example Domain",
      "value": "sparkpost.com",
    },
    Object {
      "type": "Example Domain",
      "value": "another.sparkpost.com",
    },
  ],
  "from": 1970-01-01T00:00:00.000Z,
  "relativeRange": "day",
  "to": 1970-01-02T00:00:00.000Z,
}
`;

exports[`Report Filters Reducer set report range 1`] = `
Object {
  "activeList": Array [],
  "from": 2018-01-01T00:00:00.000Z,
  "relativeRange": "day",
  "to": 2018-01-02T00:00:00.000Z,
}
`;
